--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     container_name: react_frontend
     working_dir: /app
     volumes:
-      - ./react:/app
+      - ./frontend:/app
     ports:
       - "3000:3000"
     command: npm start
