--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
@@ -25,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config=jest.config.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +46,10 @@
     ]
   },
   "devDependencies": {
-    "axios": "^1.5.0"
+    "@types/jest": "^29.5.5",
+    "axios": "^1.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
